# ro-crate-zenodo

./: CITATION.cff  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml  test.yml
demo/: demo.py
demo/demo_crate/: ro-crate-metadata.json
docs/: developer_guide.md  user_guide.md
ro-crate-uploader/: upload.py
ro-crate-uploader/test/: test_upload.py
ro-crate-uploader/test/test-data/crate1/: ro-crate-metadata.json
ro_crate_uploader/: authors.py  upload.py
ro_crate_uploader/test/: test_upload.py
ro_crate_uploader/test/test_data/demo_crate/: ro-crate-metadata.json
src/rocrate_upload/: authors.py  main.py  upload.py
src/rocrate_zenodo/: authors.py  main.py  upload.py
test/: test_author_utils.py  test_authors.py  test_licenses.py  test_upload.py
test/test_data/: licenses.json
test/test_data/invalid_data_crate/: ro-crate-metadata.json
test/test_data/no_author_crate/: ro-crate-metadata.json
test/test_data/valid_crate/: data.csv  ro-crate-metadata.json
