[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Poetry

[tool.poetry]
name = "rocrate-zenodo"
version = "0.1.0"
description = "Upload RO-Crates to Zenodo and automatically fill the Zenodo metadata"
authors = ["Eli Chadwick <eli.chadwick@manchester.ac.uk>"]
maintainers = ["Eli Chadwick <eli.chadwick@manchester.ac.uk>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://www.researchobject.org/ro-crate/"
repository = "https://github.com/ResearchObject/ro-crate-uploader"
keywords = ["rocrate", "RO-Crate"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.8.1"
zenodo-client = "^0.3.4"
rocrate = "^0.10.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
mypy = "^1.10.1"

[tool.poetry.scripts]
rocrate_zenodo = "rocrate_zenodo.main:cli_entry"
my_package_cli = 'my_package.console:run'

[tool.poetry.urls]
"Issues" = "https://github.com/ResearchObject/ro-crate-uploader/issues"

# Testing tools

## Mypy

[tool.mypy]
[[tool.mypy.overrides]]
module = "rocrate.*"
ignore_missing_imports = true

## Pytest

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--cov=rocrate_zenodo"
